apps/cloudflare-ddns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-ddns
  labels:
    network-egress-dns: "true"
    network-ingress-deny-all: "true"
